[package]
name = "query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.24", features = ["lazy", "dtype-full", "cross_join", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
