[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-cors = "0.6"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4"
env_logger = "0.9"
futures-util = "0.3"
log = "0.4"
once_cell = "1"
rand = "0.8"
query = { path = "../query" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
tokio = { version = "1", features = ["full"] }
